--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -662,6 +662,7 @@
         margin-bottom: 0!important;
     }
     #posts p{
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-self: stretch;
