--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -600,6 +600,7 @@ display: block;
     margin-bottom: 0!important;
 }
 #posts p{
+margin: 0;
 display: flex;
 flex-direction: column;
 align-self: stretch;
