--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -533,6 +533,9 @@ border: 0;
     display: inline-block;
     margin-right: 8px;
 }
+.special ul li p{
+    margin: 0;
+}
 .special ul li:nth-child(1) h3:before{
     content: '1';
 }
