--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -590,6 +590,9 @@ width: calc(33% - 50px); /* Adjust the width as needed */
 .navi nav{
 display: none!important;
 }
+#titlebar{
+padding: 0 40px;
+}
 .container{
 padding: 40px;
 flex-direction: column;
@@ -606,6 +609,9 @@ width: 100%;
 .container{
 padding: 24px;
 }
+#titlebar{
+padding: 0 24px;
+}
 /*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -614,6 +620,9 @@ padding: 24px;
 @media only screen and (max-width: 576px) {
 .container{
 padding: 20px;
+}
+#titlebar{
+padding: 0 20px;
 }
 .section{
 padding: 0 0 36px 0;
