--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -152,10 +152,7 @@ overflow: initial;
 /*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
 /*/////////////////////////////////////////////////////////////*/
-h1, #intro h2{
-font-family: 'Merriweather','Lora';
-} 
-h2, h3, h3 a, p.l, p.l span{
+h1, h2, h3, h3 a, p.l, p.l span{
 font-family: 'Lora';
 }
 *, body, p, p b, h1, h2, h3, h4{
@@ -207,6 +204,7 @@ h1, h2, h3,h4,.navi nav a {
 .navi a{
 opacity: 50%;    
 }
+h1,
 #posts nav a:hover,
 h3 a,
 .navi nav.selected a:first-of-type,
