--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -168,9 +168,9 @@ text-rendering: optimizeLegibility;
 h1,h2, h3,h4{
 line-height: 140%; 
 }
-h1{ font-size: 2em; font-weight: 400; }
+h1{ font-weight: 400; }
 p.l { font-size: 2.2em; line-height: 175%; }
-h2, h3 { font-size: 1.8em; }
+h1, h2, h3 { font-size: 1.8em; }
 #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
 #showcase h3 a > span,
