--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -169,6 +169,8 @@
     h1,h2, h3,h4{
     line-height: 140%; 
     }
+
+
     h1{ ffont-weight: 400; }
     p.l { font-size: 2.2em; line-height: 175%; }
     h1, h2, h3 { font-size: 1.8em; }
@@ -411,9 +413,10 @@
     /* TITLEBAR */
     /*/////////////////////////////////////////////////////////////*/
     #titlebar{
-    width: 100%;
     position: sticky;
     top: 0; 
+    left: 0;
+    right: 0;
     z-index: 100;
     }
     #titlebar > div{
