--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -412,9 +412,10 @@ display: flex!important;
 /* TITLEBAR */
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
-width: 100%;
 position: sticky;
 top: 0; 
+left: 0;
+right: 0;
 z-index: 100;
 }
 #titlebar > div{
