--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -301,9 +301,10 @@ padding: 68px 0 0 0;
 /* TITLEBAR */
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
-width: 100%;
 position: sticky;
 top: 100; 
+left: 0;
+right: 0;
 }
 #titlebar > div{
 padding: 12px 0;
