--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -302,9 +302,10 @@ padding: 68px 0 0 0;
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
 position: sticky;
-top: 100; 
+top: 0; 
 left: 0;
 right: 0;
+z-index: 100;
 }
 #titlebar > div{
 padding: 12px 0;
