--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -9,11 +9,10 @@
 <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 <meta name="theme-color" content="#346672">
 <link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
-<link rel="stylesheet" href="https://peteroper.github.io/portfolio/assets/css/core.css">
-<link rel="stylesheet" href="https://peteroper.github.io/portfolio/assets/css/styles.css">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EKDNBLWNTV"></script>
 <script>
@@ -154,6 +153,9 @@ overflow: initial;
 /*/////////////////////////////////////////////////////////////*/
 h1, h2, h3, h3 a, p.l, p.l span{
 font-family: 'Lora';
+}
+h1, #intro p.l{
+font-family: 'Roboto';
 }
 *, body, p, p b, h1, h2, h3, h4{
     font-size: 10px;
