--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -683,7 +683,7 @@ a:hover{
 text-decoration: underline;
 }
 /*/////////////////////////////////////////////////////////////*/
-.sticky{
+.navi.sticky{
     height: 400px;
     position: sticky;
     top: 0; 
