--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -10,7 +10,7 @@
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-<link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
 <meta name="theme-color" content="#346672">
 <link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
@@ -159,8 +159,8 @@ overflow: initial;
 h1, h2, h3, h3 a, p.l, p.l span{
 font-family: 'Lora';
 }
-h1, #intro p.l{
-font-family: 'Roboto';
+h1, #intro h2{
+font-family: 'Playfair Display';
 }
 *, body, p, p b, h1, h2, h3, h4{
     font-size: 10px;
