--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -248,7 +248,7 @@ color: #000;
 color: #FFF;
 }
 .icn{
-    color: #346672;
+color: #346672;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
@@ -270,7 +270,7 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 25
 background: #88A4AA;
 }
 #titlebar.sticky{
-    background-color: #406E79;
+    background-color: #346672;
 }
 .special ul li{
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #E9E9ED;
@@ -429,7 +429,7 @@ top: 0;
 left: 0;
 right: 0;
 z-index: 100;
-transition: background-color 1s, color 1s;
+transition: background-color 0.6s, color 0.6s;
 }
 #titlebar > div{
 padding: 12px 0;
