--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -211,6 +211,7 @@ h1, h2, h3,h4,.navi nav a {
 .navi a{
 opacity: 50%;    
 }
+#titlebar.sticky a h1, 
 #posts nav a:hover,
 h3 a,
 .navi nav.selected a:first-of-type,
