--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -422,6 +422,42 @@ display: none!important;
 display: flex!important;
 }
 /*/////////////////////////////////////////////////////////////*/
+/* Splash */
+/*/////////////////////////////////////////////////////////////*/
+.fullscreen-div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #346672;
+    color: #FFF;
+    position: relative;
+}
+.fullscreen-div img {
+    max-width: 100%;
+    max-height: 80vh; 
+}
+.fullscreen-div h1 {
+    color: #fff;
+    font-size: 24px; 
+    margin-top: 20px; 
+}
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+/* Apply the animation to the full-screen div */
+.fullscreen-div {
+    animation: fadeOut 3s ease-in-out forwards; /* Adjust the duration as needed */
+}
+/*/////////////////////////////////////////////////////////////*/
 /* TITLEBAR */
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
@@ -889,6 +925,10 @@ padding-right: 0;
 </style>
 </head>
 <body>
+    <div class="fullscreen-div">
+        <<img src="https://peteroper.github.io/portfolio/assets/imgs/avatar.png" alt="Centered Image">
+        <h1>Peter Roper</h1>
+    </div>
     <div id="titlebar" class="sticky-element"><div>
         <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
             <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
