--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -447,9 +447,11 @@ display: flex!important;
 @keyframes fadeOut {
     0% {
         opacity: 1;
+        display: block;
     }
     100% {
         opacity: 0;
+        display: none;
     }
 }
 
