--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -928,7 +928,7 @@ padding-right: 0;
 </head>
 <body>
     <div class="fullscreen-div">
-        <<img src="https://peteroper.github.io/portfolio/assets/imgs/avatar.png" alt="Centered Image">
+        <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar.png" alt="Centered Image">
         <h1>Peter Roper</h1>
     </div>
     <div id="titlebar" class="sticky-element"><div>
