--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -433,7 +433,7 @@ display: flex!important;
     align-items: center;
     background-color: #346672;
     color: #FFF;
-    position: relative;
+    position: fixed;
 }
 .fullscreen-div img {
     max-width: 100%;
@@ -441,16 +441,14 @@ display: flex!important;
 }
 .fullscreen-div h1 {
     color: #fff;
-    font-size: 24px; 
+    font-size: 4.2em; 
     margin-top: 20px; 
 }
 @keyframes fadeOut {
     0% {
-        opacity: 1;
         display: block;
     }
     100% {
-        opacity: 0;
         display: none;
     }
 }
