--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -159,7 +159,7 @@ overflow: initial;
 h1, h2, h3, h3 a, p.l, p.l span{
 font-family: 'Lora';
 }
-h1, #intro h2{
+#intro h2{
 font-family: 'Playfair Display';
 }
 *, body, p, p b, h1, h2, h3, h4{
