--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -434,6 +434,7 @@ display: flex!important;
     background-color: #346672;
     color: #FFF;
     position: fixed;
+    z-index: 1000;
 }
 .fullscreen-div img {
     max-width: 100%;
