--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -447,10 +447,10 @@ display: flex!important;
 }
 @keyframes fadeOut {
     0% {
-        display: block;
+        opacity: 100%;
     }
     100% {
-        display: none;
+        opacity: 0%;
     }
 }
 
