--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -386,23 +386,37 @@ background-position: 0 100%;
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
+
+
+@keyframes fadeOut {
+    0% {
+        opacity: 100%;
+    }
+    100% {
+        opacity: 0%;
+    }
+}
+/* Apply the animation to the full-screen div */
+.fullscreen-div.loaded {
+    animation: fadeOut 1.4s ease-in-out forwards; /* Adjust the duration as needed */
+}
+.container {
+opacity: 1;
+transition: opacity 2s ease-out;
+}
+.navi nav a {  
+  opacity: 50%;
+  transition: opacity 2.6s ease-in-out;
+}
+.container.fade {
+opacity: 0;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* CORE */
 /*/////////////////////////////////////////////////////////////*/
 li{ list-style-position: inside;}
-.navi nav a {  
-  opacity: 50%;
-  transition: font-weight 0.3s ease-in-out, opacity 0.3s ease-in-out;
-}
 html, body {
   scroll-behavior: smooth;
-}
-.container {
-opacity: 1;
-transition: opacity 0.5s ease-out;
-}
-.container.fade {
-opacity: 0;
 }
 a{
 text-decoration: none;
@@ -444,19 +458,6 @@ display: flex!important;
     color: #fff;
     font-size: 4.2em; 
     margin-top: 20px; 
-}
-@keyframes fadeOut {
-    0% {
-        opacity: 100%;
-    }
-    100% {
-        opacity: 0%;
-    }
-}
-
-/* Apply the animation to the full-screen div */
-.fullscreen-div.loaded {
-    animation: fadeOut 1.4s ease-in-out forwards; /* Adjust the duration as needed */
 }
 /*/////////////////////////////////////////////////////////////*/
 /* TITLEBAR */
