--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -6,11 +6,12 @@
 <meta name="robots" content="noindex, nofollow" />
 <meta name="google-site-verification" content="gdAK0KN1Yy7jAIyafcJnFagF6wj12OobQYi8jAIlgMM" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
+<!--link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'-->
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+<!--link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'-->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
 <meta name="theme-color" content="#346672">
 <link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
@@ -163,6 +164,8 @@ font-family: 'Lora';
 }
 #intro h2{
 font-family: 'Playfair Display';
+font-family: 'Lora';
+font-weight: 700;
 }
 *, body, p, p b, h1, h2, h3, h4{
     font-size: 10px;
