--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -54,9 +54,12 @@
   $(window).on("load", function() {
     setTimeout(function() {
         $(".body").fadeIn(800); 
-    }, 2000);
+    }, 1700);
     setTimeout(function() {
         $(".navi nav, .navi .back").fadeIn(800); 
+    }, 2300);
+    setTimeout(function() {
+        $("#titlebar").fadeIn(800); 
     }, 2600);
   });
 
