--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -244,8 +244,6 @@ h3 a,
 nav a{
 color: #000;
 }
-#titlebar.sticky div a,
-#titlebar.sticky nav a,
 .header,
 #project ul span,
 .special ul li h3:before{
@@ -272,9 +270,6 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 25
 #project ul span,
 .special ul li h3:before{
 background: #88A4AA;
-}
-#titlebar.sticky{
-    background-color: #346672;
 }
 .special ul li{
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #E9E9ED;
@@ -389,8 +384,12 @@ background-position: 0 100%;
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
-
-
+/*/////////////////////////////////////////////////////////////*/
+/* ANIMATION */
+/*/////////////////////////////////////////////////////////////*/
+.fullscreen-div.loaded {
+    animation: fadeOut 0.6s ease-in-out forwards; /* Adjust the duration as needed */
+}
 @keyframes fadeOut {
     0% {
         opacity: 100%;
@@ -398,12 +397,6 @@ background-position: 0 100%;
     100% {
         opacity: 0%;
     }
-}
-/*/////////////////////////////////////////////////////////////*/
-/* ANIMATION */
-/*/////////////////////////////////////////////////////////////*/
-.fullscreen-div.loaded {
-    animation: fadeOut 0.6s ease-in-out forwards; /* Adjust the duration as needed */
 }
 .container {
 opacity: 1;
@@ -473,7 +466,6 @@ top: 0;
 left: 0;
 right: 0;
 z-index: 100;
-transition: background-color 0.6s, color 0.6s;
 }
 #titlebar > div{
 padding: 12px 0;
@@ -494,8 +486,8 @@ height: 30px;
 background-size: 100% auto;
 }
 #titlebar nav{
-    display: flex;
-    gap: 24px;
+display: flex;
+gap: 24px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* NAVI */
@@ -847,6 +839,17 @@ padding: 0 24px;
 #adventurecards,
 #pulse-football{
 margin-right: -24px;
+}
+/*/////////////////////////////////////////////////////////////*/
+#titlebar{
+transition: background-color 0.6s, color 0.6s;
+}
+#titlebar.sticky div a,
+#titlebar.sticky nav a{
+    color: #FFF;
+}
+#titlebar.sticky{
+    background-color: #346672;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
