--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -44,7 +44,7 @@
   });
 });*/
  $(document).ready(function() {
-    $(".body, .navi nav, .navi .back").css("display", "none"); // Ensure container is hidden initially
+    $(".body, .navi nav, .navi .back, #titlebar").css("display", "none"); // Ensure container is hidden initially
     $(window).on("load", function() { 
     setTimeout(function() {
         $(".fullscreen-div").addClass("loaded");
@@ -400,11 +400,11 @@ background-position: 0 100%;
 }
 .container {
 opacity: 1;
-transition: opacity 2s ease-out;
+transition: opacity 0.6s ease-out;
 }
 .navi nav a {  
   opacity: 50%;
-  transition: opacity 2.6s ease-in-out;
+  transition: opacity 0.6s ease-in-out;
 }
 .container.fade {
 opacity: 0;
