--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -425,7 +425,7 @@ text-decoration: none;
 .container{
 display: flex;
 justify-content: center;
-padding: 68px 0 0 0;
+padding: 104px 0 0 0;
 }
 .tab-container{
 display: none!important;
@@ -461,7 +461,7 @@ display: flex!important;
 /* TITLEBAR */
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
-position: sticky;
+position: fixed;
 top: 0; 
 left: 0;
 right: 0;
