--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -44,20 +44,20 @@
   });
 });*/
  $(document).ready(function() {
-    $(".body, .navi nav, .navi .back, #titlebar").css("display", "none"); // Ensure container is hidden initially
+    $(".navi nav, .navi .back, #titlebar").css("display", "none"); // Ensure container is hidden initially
     $(window).on("load", function() { 
     setTimeout(function() {
         $(".fullscreen-div").addClass("loaded");
     }, 400);
-        setTimeout(function() {
+    /*setTimeout(function() {
         $(".body").fadeIn(800); 
-    }, 1400);
+    }, 1400);*/
     setTimeout(function() {
         $(".navi nav, .navi .back").fadeIn(800); 
-    }, 2200);
+    }, 1400);
     setTimeout(function() {
         $("#titlebar").fadeIn(800); 
-    }, 2400);
+    }, 2000);
     });
 
 
