--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -792,10 +792,6 @@ flex-direction: column;
 width: 100%;
 }
 /*/////////////////////////////////////////////////////////////*/
-#adventurecards,
-#pulse-football{
-margin-right: -40px;
-}
 #showcase .scrollable{
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
@@ -830,9 +826,7 @@ padding: 104px 20px 68px 20px;
 #titlebar{
 padding: 0 20px;
 }
-#posts,
-#adventurecards,
-#pulse-football{
+#posts{
 margin-right: -20px;
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -1089,63 +1083,12 @@ padding-right: 0;
             <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy2.1.png);"></a>
         </div>
         <div id="adventurecards" class="segment">
-            <h3>Adventure Cards</h3>
-            <div id="showcase2" class="scrollable"><div>
-                <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.1.jpg" />
-                <div>
-                    <p class="l">Adventure Card is an Adventure Sports and Events organisation with upwards of 100 exciting activities found at over 5000 venues located in The UK and Australia.</p>
-                    <p>With fresh eyes and a new perspective gained while working exclusively as a UX designer this showcase builds on past experiences working in the event industry to create a more refined mobile first and responsive website design.</p>
-                    <p class="l">Objectives</p>
-                    <ol>
-                        <li>Refine existing IA to improve findability and streamline user journeys.</li>
-                        <li>Apply universal UI patterns for an intuitive UX.</li>
-                        <li>Identify areas for User Research & Testing.</li>
-                    </ol>
-                </div>
-                <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.2.jpg" />
-                <div class="hypothesis">
-                    <p class="l">Information architecture and value proposition are 2 key aspects I focussed on when re imagining the UX for adventure cards.</p>
-                    <p>The user journey for event bookings includes search, filter, purchase and post purchase planning. Different variables such as location, price, restrictions and availability also need to be factored in.</p>
-                    <p>Value proposition is important due to a competitive market. However when re-evaluting the UX and UI I realised this requirement reduced usability. Therefore I aimed to tie usability to the value proposition and apply different techniques to build brand awareness.</p>
-                </div>
-                <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.3.jpg" />
-                <div class="research">
-                    <p class="l">In addition to usability testing of features and flows the following areas would give valuable insights to user preference and recall.
-                    <ol>
-                        <li><b>UX Wording</b> - Gather feedback from users on the understanding and impact of different titles and call-to-action wording.</li>
-                        <li><b>Activity Images</b> - Analyze user responses to identify patterns and trends in image preferences, helping to optimize the selection of activity images.</li>
-                        <li><b>Value Proposition</b> - distribute surveys to a broader user base to gather quantitative data on how users perceive the app's value proposition</li>
-                        <li><b>Brand Awareness</b> - During usability testing sessions, assign users specific tasks that involve finding the product again in the future.</li>
-                    </ol>
-                </div>
-                <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.4.jpg" />
-            </div></div>
+            <h3>Adventure Cards Information Architecture</h3>
+            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/showcase2.2.jpg);"></a> 
         </div>
         <div id="pulse-football" class="segment">
-            <h3>Pulse Football</h3>
-            <div id="showcase1" class="scrollable"><div>
-                <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
-                <div>     
-                    <p class="l">Pulse Football is a one stop indepth app for fans who need more than just the news.</p>
-                    <p>Many football fans obsess over the tiniest piece of information. However finding this information involves searching across numerous websites and media platforms to get a comprehensive understanding of whats happening on a daily basis.</p>
-                    <p class="l">Product Overview</p>
-                    <ol>
-                        <li>All in one application: news, analysis & community.</li>
-                        <li>Apply IA to simplify information gathering.</li>
-                        <li>Refine information based on user interests.</li>
-                        <li>Create Seemless UX with interaction and transitions.</li>
-                    </ol>
-                </div>
-                <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
-                <div class="hypothesis">
-                    <p class="l">Football at your finger tips</p>
-                    <p>Over the last 7-8 years I have noticed football related products becoming more sophisticated. Notable applications would include Fantasy Premier League, Transfermarkt and One Football.</p>
-                    <p>Although One Football is pushing boundaries, football news still feels trapped in an outdated media format, where information is spread across multiple articles.</p>
-                    <p>Thanks to the advent of AI, it is now possible to aggregate and combine football information to cater to users' specific needs. This includes providing comprehensive analysis, data insights, and an all-in-one football experience.</p>
-                </div>
-                <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
-            </div></div>
-        </div>
+            <h3>Seamless Football Interface</h3>
+            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/showcase1.1.jpg);"></a>
         </div>
         <!-- showcase ends -->
 
