--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -1075,11 +1075,11 @@ padding-right: 0;
     <div id="showcase" class="section">
         <h4>Showcase</h4>
         <div id="initial-experience" class="segment">
-            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="fade-link">Optimizing the Initial Experience <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
+            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="fade-link">Optimizing the Initial Experience <!--span>Case Study <span class="icn material-icons">chevron_right</span></span--></a></h3>
             <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" class="fade-link img"></a>
         </div>
         <div id="content-navigation" class="segment">
-            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="fade-link">Enhancing Content Browsing <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
+            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="fade-link">Enhancing Content Browsing <!--span>Case Study <span class="icn material-icons">chevron_right</span></span--></a></h3>
             <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy2.1.png);"></a>
         </div>
         <div id="adventurecards" class="segment">
