--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -393,9 +393,11 @@ background-position: 0 100%;
 @keyframes fadeOut {
     0% {
         opacity: 100%;
+        display: block;
     }
     100% {
         opacity: 0%;
+        display: none;
     }
 }
 .container {
