--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -53,7 +53,8 @@
         $(".body").fadeIn(800); 
     }, 1400);*/
     setTimeout(function() {
-        $(".navi nav, .navi .back").fadeIn(800); 
+        $(".navi nav, .navi .back").fadeIn(800);
+        $(".fullscreen-div").addClass("none"); 
     }, 1400);
     setTimeout(function() {
         $("#titlebar").fadeIn(800); 
@@ -390,14 +391,15 @@ background-position: 0 100%;
 .fullscreen-div.loaded {
     animation: fadeOut 0.6s ease-in-out forwards; /* Adjust the duration as needed */
 }
+.fullscreen-div.none {
+display: none;
+}
 @keyframes fadeOut {
     0% {
         opacity: 100%;
-        display: block;
     }
     100% {
         opacity: 0%;
-        display: none;
     }
 }
 .container {
