--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -46,13 +46,19 @@ document.addEventListener("DOMContentLoaded", function () {
 
  $(document).ready(function() {
 
-  $(".body, .navi nav, .navi .back").css("display", "none"); // Ensure container is hidden initially
-  $(window).on("load", function() {
-    $(".body").fadeIn(800); 
+    $(".navi nav, .navi .back, #titlebar").css("display", "none"); // Ensure container is hidden initially
+    $(window).on("load", function() { 
     setTimeout(function() {
-        $(".navi nav, .navi .back").fadeIn(800); 
-    }, 600);
-  });
+        $(".fullscreen-div").addClass("loaded");
+    }, 400);
+    setTimeout(function() {
+        $(".navi nav, .navi .back").fadeIn(800);
+        $(".fullscreen-div").addClass("none"); 
+    }, 1400);
+    setTimeout(function() {
+        $("#titlebar").fadeIn(800); 
+    }, 2000);
+    });
 
   var stickyElement = $('.sticky-element');
   var initialOffset = stickyElement.offset().top;
