--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -1023,7 +1023,8 @@ padding-right: 0;
             <h3>Seamless Football Interface</h3>
             <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg);"></a>
         </div>
-        <!-- showcase ends -->
+    </div>
+    <!-- showcase ends -->
 
     </div>
     <!-- body ENDS -->
