--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -725,7 +725,10 @@ padding: 16px;
 </style>
 </head>
 <body>
-
+    <div class="fullscreen-div">
+        <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar.png" alt="Centered Image">
+    </div>
+    
     <div id="titlebar"><div>
         <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
             <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
