--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -892,6 +892,10 @@ transition: background-color 0.6s, color 0.6s;
 </style>
 </head>
 <body>
+    <div class="fullscreen-div">
+        <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar.png" alt="Centered Image">
+    </div>
+    
 <div id="titlebar"><div>
     <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
         <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
