--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -161,6 +161,7 @@ font-weight: 700;
 }
 #intro h2{ font-size: 4.2em; }
 h2 { font-size: 2em; }
+h1 { font-size: 1.8em; }
 #titlebar nav a, h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 .segment h4, .navi nav a{ font-size: 1.3em; }
 h4 a, p.l span, p u, p a, li b{
@@ -744,7 +745,7 @@ padding: 16px;
 <div class="navi sticky-element">
     <a href="https://peteroper.github.io/portfolio/casestudies/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
     <nav class="selected">
-        <a href="#overview" class="selected">Overview</a>
+        <a href="#intro" class="selected">Overview</a>
         <a href="#project">Project</a>
         <a href="#product">Product</a>
         <a href="#context">Context</a>
@@ -791,7 +792,7 @@ padding: 16px;
 <div class="body">
     
     <!-- Overview -->
-    <div id="overview" class="section">
+    <div id="intro" class="section">
         <h2>Optimizing the Initial Experience</h2>
         <div id="project" class="segment">
             <p>I work as a Senior UX Designer for the au Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
