--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -910,8 +910,9 @@ transition: background-color 0.6s, color 0.6s;
 <div id="fade-container" class="container">
 
 <div class="body">
-    <div id="experience" class="section">
+    <div id="intro" class="section">
         <div class="segment">
+            <h2>A strapline goes here</h2>
             <p class="l b">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational smartphone insurance and tech-support provider. </p>
             <p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p>
             <p>Over the past two years, I have worked on Asurion’s flagship product, an au support application for KDDI.  Previous responsibilities at Asurion saw me lead the design tasks for CMS, Admin tools and Chat Systems. In addition to supporting the localization of the companies photo storage app.</p>
@@ -1106,7 +1107,7 @@ transition: background-color 0.6s, color 0.6s;
     <div class="navi sticky-element">
         <a href="https://peteroper.github.io/portfolio/casestudies/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
         <nav class="selected">
-            <a href="#experience">Experience</a>
+            <a href="#intro">Experience</a>
             <a href="#career">Past Experience</a>
             <a href="#skills">Skills</a>
             <a href="#goals">Goals</a>
